[Jeeva]add Integration test for backend